# Moderator

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: router.py
src/api/v1/: api_v1.py
src/api/v1/ai/: controller.py  schema.py  utils.py
src/core/: config.py
src/services/firebase/: service.py
src/services/moderator/: service.py
src/utils/: firebase.py  middlewere.py  openai_client.py  redis_connection.py
